--- a/src/locales/vi/headerVI.json
+++ b/src/locales/vi/headerVI.json
@@ -28,7 +28,7 @@
     "tetx_5": "Xem thêm tại",
     "text_6": "Các dự án đạt được",
     "text_7": "Kairos",
-    "text_8": "Kairos là phần mềm Android được bằng Flutter trên Android stuido với mục đích giúp người dùng có thể xem ngày tháng"
+    "text_8": "Kairos là phần mềm Android được viết bằng Flutter trên Android stuido với mục đích giúp người dùng có thể xem ngày tháng"
 
   },
   "aboutme": {
