--- a/src/locales/en/headerEN.json
+++ b/src/locales/en/headerEN.json
@@ -31,7 +31,7 @@
     "tetx_5": "See more at",
     "text_6": "Projects achieved",
     "text_7":"Kairos",
-    "text_8": "Kairos is an Android software written in Flutter on Android Studio, designed to help users view dates."
+    "text_8": "Kairos is an Android software written in Flutter on Android Studio, designed to help users view dates(This application is currently being developed)."
 
   },
   "aboutme": {
